@@ -1,9 +1,10 @@
 from typing import AsyncGenerator
-from sqlalchemy.ext.asyncio import AsyncSession, create_async_engine
+from sqlalchemy.ext.asyncio import AsyncSession
+from sqlalchemy.ext.asyncio import create_async_engine
 from sqlalchemy.ext.declarative import declarative_base
 from sqlalchemy.orm import sessionmaker
 
-from config import settings
+from src.config import settings
 
 
 DATABASE_URL = str(settings.DATABASE_URL)
@@ -12,10 +13,10 @@ Base = declarative_base()
 
 engine = create_async_engine(DATABASE_URL)
 async_session_maker = sessionmaker(
-        engine,
-        class_=AsyncSession,
-        expire_on_commit=False
-        )
+    engine,
+    class_=AsyncSession,
+    expire_on_commit=False
+)
 
 
 async def get_async_session() -> AsyncGenerator[AsyncSession, None]:
