@@ -8,4 +8,7 @@ INIT\FIX\UPDATE\APPEND\
 
 [AF-10]-users_models
     INIT:Создана модель User. Добавлены админские роуты для создания пользователя и просморта списка пользователей
-    
+
+[AF-14]-Docker
+    INIT:Создана сборка docker-compose. Собран образ для app. 
+    Приложение состоит из двух контейнеров(app, app_db)  
